@@ -153,6 +153,9 @@ Working version
 - #9468: HACKING.adoc: using dune to get merlin's support
   (Thomas Refis, review by Gabriel Scherer)
 
+- #9745: Manual: Standard Library labeled and unlabeled documentation unified
+  (John Whitington, review by Nicolás Ojeda Bär)
+
 ### Compiler user-interface and warnings:
 
 * #9011: Do not create .a/.lib files when creating a .cmxa with no modules.
